[gd_scene load_steps=9 format=3 uid="uid://ckg3n6hylpj6d"]

[ext_resource type="Script" path="res://Scripts/PlayerController.gd" id="1_ghs4j"]
[ext_resource type="SpriteFrames" uid="uid://bw8e1ny6tvqer" path="res://Animations/Characters/MrNegative_SpriteFrames.tres" id="2_ei0k5"]
[ext_resource type="Script" path="res://Scripts/Components/CharacterAnimationController.gd" id="6_clvgg"]
[ext_resource type="PackedScene" uid="uid://chsdx2k7j1msh" path="res://Components/MoveController.tscn" id="7_hjy2d"]
[ext_resource type="PackedScene" uid="uid://8j6spyu4rhxh" path="res://Components/HealthController.tscn" id="8_mfp3e"]
[ext_resource type="PackedScene" uid="uid://be56goflb0lrn" path="res://Components/AttackController.tscn" id="9_mre6t"]
[ext_resource type="PackedScene" uid="uid://clg2ah2j3c12d" path="res://Components/InputControllerRemote.tscn" id="10_6g6e6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rtbbd"]
radius = 8.0

[node name="Player" type="RigidBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 7
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_ghs4j")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_rtbbd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_ei0k5")
animation = &"Idle_Down"
script = ExtResource("6_clvgg")

[node name="MoveController" parent="." instance=ExtResource("7_hjy2d")]

[node name="HealthController" parent="." instance=ExtResource("8_mfp3e")]

[node name="AttackController" parent="." instance=ExtResource("9_mre6t")]

[node name="InputController" parent="." instance=ExtResource("10_6g6e6")]
position = Vector2(256.569, -19.1071)
